Modif-wave loisirs

--- a/acceuil.html
+++ b/acceuil.html
@@ -66,17 +66,17 @@
         </div>
 
         <!-- Responsive -->
-        <div class="offcanvas offcanvas-end " tabindex="-1" id="menuMobile">
+        <div class="offcanvas offcanvas-end  h-50 " tabindex="-1" id="menuMobile">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title">Menu</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
             </div>
 
             <div class="offcanvas-body">
-                <ul class="nav  gap-3">
+                <ul class="nav flex-column gap-3">
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-tree-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
 
 
@@ -86,21 +86,21 @@
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
                             <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
-                    
 
-                    </i>Citoyens</a>
+
+                            </i>Citoyens</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-bank bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
 
 
-                            </i>Municipalitées</a>
+                            </i>Municipalités</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.ville.daveluyville.qc.ca/demandes-de-permis" class="nav-link text-dark ">
-                            <i class="bi bi-houses-fill bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
+                            <i class="bi bi-phone bi  mx-auto mb-1 fs-2 text-center " width="24" height="24"
                                 aria-hidden="true">
                             </i>Nous joindre</a>
                     </li>
