--- a/municipalite.html
+++ b/municipalite.html
@@ -51,14 +51,14 @@
 
                     <li class="nav-item me-5 ">
                         <form class="d-flex gap-2">
-                            <input type="search" class="form-control" placeholder="Recherche…">
+                            <input type="search" class="form-control"  aria-label="recherche" placeholder="Recherche…">
                             <button class="btn btn-primary">Trouver</button>
                         </form>
                     </li>
                 </ul>
                 <!--  BURGER  -->
                 <button class="d-lg-none btn text-white fs-3" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#menuMobile" aria-controls="menuMobile"> <i class="bi bi-list"></i>
+                    data-bs-target="#menuMobile" aria-controls="menuMobile"># <i class="bi bi-list"></i>
 
                 </button>
                 <!-- Logo -->
@@ -126,6 +126,10 @@
 
     </header>
     <main>
+
+
+
+        
         <!-- Section 1 Municipalités -->
         <section class="container mt-5">
             <h1 class="display-3">Hôtel de ville</h1>
