--- a/vivreici.html
+++ b/vivreici.html
@@ -130,158 +130,11 @@
 
         <section class="  container-fluid mt-5">
             <h1 class="display-3 ms-5">Vivre ici!</h1>
-            <h3 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque </h3>
-            <div>
-                <div class=" container col-xxl-8 px-1 py-1">
-                    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                        <div class="col-10 col-sm-8 col-lg-6">
-
-                            <!-- Carousel -->
-                            <div class="carousel-accueil d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-                                width="900" height="700" loading="lazy">
-                                <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-                                    <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0"
-                                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"
-                                            aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"
-                                            aria-label="Slide 3"></button>
-                                    </div>
-                                    <!-- Carousel #1-->
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img class="img-fluid w-100" src="Daveluyville-Images/hiver-davel.png"
-                                                alt="">
-
-
-                                        </div>
-                                        <!-- Carousel #2-->
-                                        <div class="carousel-item">
-
-                                            <img class="img-fluid w-100" src="Daveluyville-Images/Hiver-sapin-parc.jpg"
-                                                alt="">
-                                            <svg aria-hidden="true" class="bd-placeholder-img" height="100%"
-                                                preserveAspectRatio="xMidYMid slice" width="100%"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)">
-                                                </rect>
-                                            </svg>
-
-                                        </div>
-                                        <!-- Carousel #3-->
-                                        <div class="carousel-item">
-                                            <img class="img-fluid w-100" src="Daveluyville-Images/daveluyville_1.jpg"
-                                                alt="">
-                                            <svg aria-hidden="true" class="bd-placeholder-img " height="100%"
-                                                preserveAspectRatio="xMidYMid slice" width="100%"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)">
-                                                </rect>
-                                            </svg>
-
-                                        </div>
-                                    </div>
-                                    <!-- options Carousel -->
-                                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
-                                        data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Previous</span>
-                                    </button>
-                                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
-                                        data-bs-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Next</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
-                                Responsive left-aligned hero with image
-                            </h1>
-                            <p class="lead">
-                                Quickly design and customize responsive mobile-first sites with
-                                Bootstrap, the world’s most popular front-end open source toolkit,
-                                featuring Sass variables and mixins, responsive grid system,
-                                extensive prebuilt components, and powerful JavaScript plugins.
-                            </p>
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
-                                    Primary
-                                </button>
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-                                    Default
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <h3 class="display-6 fst-italic ms-5 mt-4">Daveluyville se démarque ! </h3>
+            
 
 
 
-                <!-- Carousel Vivre ici!-->
-                <div class=" carousel-vivre container my-5">
-                    <div class="row g-4 text-center">
-                        <div class="col-md-4">
-                            <h1 class="display-5">PARCS</h1>
-                            <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-inner carousel-vivre-inner rounded">
-                                    <div class="carousel-item active">
-                                        <img src="Daveluyville-Images/daveluyville-2020-jasmin-lambert-02.jpg"
-                                            class="d-block w-100 h-100">
-                                    </div>
-                                    <div class="carousel-item active">
-                                        <img src="Daveluyville-Images/jeux_deau_-_parc_beaudoin.jpg"
-                                            class="d-block w-100 h-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/parc-beaudoin-ete.jpg" class="d-block w-100 h-60">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/Parc-ecole.jpg" class="d-block w-100">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <h1 class="display-5">SPORTS</h1>
-                            <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-inner carousel-vivre-inner rounded">
-                                    <div class="carousel-item active">
-                                        <img src="Daveluyville-Images/sports-terrain-dek.jpg" class="d-block w-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/parc-hiver-glissade.jpg" class="d-block w-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/photo_gymnase_5.jpg" class="d-block w-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/tennis.jpg" class="d-block w-100 h-100">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <h1 class="display-5 text-center">ACTIVITÉS</h1>
-                            <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-inner carousel-vivre-inner rounded">
-                                    <div class="carousel-item active">
-                                        <img src="Daveluyville-Images/logo-jeudis-micros.jpg" class="d-block w-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/activite-balade-parc.jfif" class="d-block w-100">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="Daveluyville-Images/activite-brasierville.jpg" class="d-block w-100">
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
                     <!-- Section 3 -->
                     <div class="container justify-content-between align-items-center mt-5 mb-5">
 
@@ -433,10 +286,6 @@
                 <div class="d-flex align-items-center gap-3 justify-content-start footer-logos">
                     <a href="http://">
                         <img class="img-fluid" src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
-                    </a>
-                    <a href="http://">
-                        <img class="img-fluid" src="Daveluyville-Images/victoetsaregion.png"
-                            alt="accès Victo et sa région">
                     </a>
 
                     <a href="https://daveluyville.appvoila.com/fr/">
